--- a/game.html
+++ b/game.html
@@ -18,9 +18,9 @@
     <header>
       <img src="" alt="" />
       <div id="header-title">
-        <h1>lolo</h1>
+        <h1 id="title1">lolo</h1>
         <h1>vs</h1>
-        <h1>name2</h1>
+        <h1 id="title2">name2</h1>
       </div>
       <button>quitter</button>
       <button>recommencer</button>
@@ -32,18 +32,18 @@
         <button id="roll-dice">lancer les dés</button>
       </div>
       <div class="container">
-        <div class="player-board player-one">
-          <h2>name1</h2>
-          <img src="" alt="avatar player 1" />
-          <div class="tokens-box">box jetons joueur 2</div>
+        <div id="player1" class="player-board">
+          <h2 id="name1"></h2>
+          <img src="" id="avatar1" alt="avatar player 1" />
+          <div id="box-token1" class="tokens-box">box jetons joueur 2</div>
         </div>
 
         <div id="gameboard" class="container"><p>gameboard</p></div>
 
-        <div class="player-board player-two">
-          <h2>name2</h2>
-          <img src="" alt="avatar player 2" />
-          <div class="tokens-box">box jetons joueur 2</div>
+        <div id="player2" class="player-board">
+          <h2 id="name2"></h2>
+          <img src="" id="avatar2" alt="avatar player 2" />
+          <div id="box-token1" class="tokens-box">box jetons joueur 2</div>
         </div>
       </div>
       <div class="container">
@@ -51,5 +51,6 @@
       </div>
     </main>
     <footer></footer>
+    <script type="module" src="javascripts/modules/game.mjs"></script>
   </body>
 </html>
