--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
               type="text"
               id="name"
               name="name"
-              minlength="4"
+              minlength="1"
               maxlength="8"
               size="10"
             />     
-          <div id="avatar-player"><div id="empty"></div></div>
+          <div id="avatar-player"></div>
           <button id="start">Valider joueur 1</button>
         </div>
         <div class="avatars">
