--- a/game.html
+++ b/game.html
@@ -15,6 +15,7 @@
     <title>Game 421</title>
   </head>
   <body>
+    
     <header>
       <img src="" alt="" />
       <div id="header-title">
@@ -24,7 +25,7 @@
       </div>
       <button>quitter</button>
       <button>recommencer</button>
-      <button>régles</button>
+      <button id="btn-rules">régles</button>
     </header>
     <main>
       <div id="head-game" class="container">
@@ -66,6 +67,122 @@
       </div>
     </main>
     <footer></footer>
+    <div id="rules" class="modal">
+      <!-- Modal content -->
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <h2>Comment jouer au 421</h2>
+        <p>
+          On joue généralement le <strong>421</strong> en deux manches, la « charge » et la «
+          décharge ». L’ensemble des jetons est appelé le "pot".
+        </p>
+        <p>
+          Lors de la première partie du jeu, la « charge », les joueurs vont se répartir les 21
+          jetons entre eux en espérant en récupérer le moins possible. Lors de la deuxième partie,
+          la « décharge », les joueurs devront se débarrasser du plus de jetons possible.
+        </p>
+        <p>
+          Le joueur à gauche démarrera la partie en lançant les trois dés. Pour
+          chacun des trois dés il peut choisir de relancer ou non. S’il ne relance pas il aura
+          effectué un seul lancer. Le joueur peut, si il le désire, relancer une deuxième et une
+          troisième fois tout ou partie des trois dés.
+        </p>
+        <p>
+          Ainsi, si le premier joueur à lancé trois fois les dés les autres joueurs devront obtenir plus fort avec le même nombre de coup ou moins.
+        </p>
+        <p>
+         Lorsqu’un joueur est satisfait de sa combinaison il click sur la boutton "le bon".
+          Cela lui permet de valider sa combinaison.
+        </p>
+        <p>
+          Au cours de la «&nbsp;charge&nbsp;», celui qui fait la moins bonne combinaison reçoit des
+          jetons du «&nbsp;pot&nbsp;». Le nombre de jetons distribué au joueur est déterminé par la
+          meilleure combinaison <em>(voir les valeurs des combinaisons ci-dessous)</em>.
+        </p>
+        <table>
+        </h2>Force et Valeur des combinaisons par ordre décroissant :</h2>
+          <tbody>
+            <tr class="ligne-head">
+              <td class="cell-combi">Combinaison</td>
+              <td class="cell-value">Valeur</td>
+            </tr>
+            <tr class="ligne">
+              <td class="cell-combi">421</td>
+              <td class="cell-value">10 jetons</td>
+            </tr>
+            <tr class="ligne">
+              <td class="cell-combi">3 As</td>
+              <td class="cell-value">7 jetons</td>
+            </tr>
+            <tr class="ligne">
+              <td class="cell-combi">2 As et Six</td>
+              <td class="cell-value" rowspan="2">6 jetons</td>
+            </tr>
+            <tr class="ligne">
+              <td class="cell-combi">3 Six</td>
+              <td class="cell-value"></td>
+            </tr>
+            <tr class="ligne">
+              <td class="cell-combi">2 As et Cinq</td>
+              <td class="cell-value" rowspan="2">5 jetons</td>
+            </tr>
+            <tr class="ligne">
+              <td class="cell-combi">3 Cinq</td>
+              <td class="cell-value"></td>
+            </tr>
+            <tr class="ligne">
+              <td class="cell-combi">2 As et Quatre</td>
+              <td class="cell-value" rowspan="2">4 jetons</td>
+            </tr>
+            <tr class="ligne">
+              <td class="cell-combi">3 Quatre</td>
+              <td class="cell-value"></td>
+            </tr>
+            <tr class="ligne">
+              <td class="cell-combi">2 As et Trois</td>
+              <td class="cell-value" rowspan="2">3 jetons</td>
+            </tr>
+            <tr class="ligne">
+              <td class="cell-combi">3 Trois</td>
+              <td class="cell-value"></td>
+            </tr>
+            <tr class="ligne">
+              <td class="cell-combi">2 As et Deux</td>
+              <td class="cell-value" rowspan="6">2 jetons</td>
+            </tr>
+            <tr class="ligne">
+              <td class="cell-combi">3 Deux</td>
+              <td class="cell-value"></td>
+            </tr>
+            <tr class="ligne">
+              <td class="cell-combi">Quatre, Cinq, Six</td>
+              <td class="cell-value"></td>
+            </tr>
+            <tr class="ligne">
+              <td class="cell-combi">Trois, Quatre, Cinq</td>
+              <td class="cell-value"></td>
+            </tr>
+            <tr class="ligne">
+              <td class="cell-combi">Deux, Trois, quatre</td>
+              <td class="cell-value"></td>
+            </tr>
+            <tr class="ligne">
+              <td class="cell-combi">As, Deux, Trois</td>
+              <td class="cell-value"></td>
+            </tr>
+            <tr class="ligne">
+              <td class="cell-rest">
+                Toutes autres combinaisons (Du + au -) </br>selon le principe (Six, Trois, As = 631 plus
+                fort que Six, Deux, As = 621)
+              </td>
+              <td class="cell-value">1 jetons</td>
+            </tr>
+          </tbody>
+        </table>
+        <p>La combinaison 2,2,1 est appelée « nénette ». C’est la plus faible des combinaisons. Peu importe la meilleure combinaison qui a été réalisée, celui qui fait une « nénette » reçoit d’office 2 jetons.</p>
+        <p>Une fois que le « pot » est vide on peut alors commencer la deuxième manche. Lors de la « décharge » le but est d’être le premier joueur à ne plus avoir de jetons. Les règles sont les mêmes, la meilleure combinaison du tour donne ses jetons à la plus faible. Lorsqu’un joueur n’a plus de jetons la partie se termine et il est déclaré vainqueur.</p>
+      </div>
+    </div>
     <script type="module" src="javascripts/modules/game.mjs"></script>
   </body>
 </html>
