refactor move logic into dices421 class

--- a/game.html
+++ b/game.html
@@ -24,7 +24,7 @@
         <h1 id="title2">name2</h1>
       </div>
       <button>quitter</button>
-      <button>recommencer</button>
+      <button id="restart">recommencer</button>
       <button id="btn-rules">régles</button>
     </header>
     <main>
