add autoCharge method in Game421 class

--- a/public/game.html
+++ b/public/game.html
@@ -128,6 +128,7 @@
       <div id="head-game" class="container">
         <button id="validate-shot">garder le coup</button>
         <h2 id="game-round"></h2>
+        <button id="auto-charge">Charge auto</button>
         <button id="roll-dices">lancer les dés</button>
       </div>
       <div class="container">
