fix bug to much token from pot

--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
         </div>
     </main>
     <footer>
-      <a href="https://fr.vecteezy.com/vecteur-libre/avatar">Avatar Vecteurs par Vecteezy</a>
+      <a href="https://fr.vecteezy.com/vecteur-libre/avatar">Merci à Avatar Vecteurs par Vecteezy</a>
     </footer>
     <script type="module" src="javascripts/modules/welcome.mjs"></script>
   </body>
