--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon"  href="./images/favicon.ico" />
+    <link rel="icon" href="./images/favicon.ico" />
     <link rel="stylesheet" href="./stylesheets/base.css" />
     <link rel="stylesheet" href="./stylesheets/welcome.css" />
 
@@ -16,57 +16,55 @@
     <title>Home 421</title>
   </head>
   <body>
-    <div id="wrapper"> 
-    <header class="desktop">
-      <h1 class="container desktop">Une partie de 421 ?</h1>
-    </header>
-    <main>
-      <p id="info-desktop" class="container desktop">
-        Ce 421 ce joue a deux veuillez choisir un nom et un avatar, pour chaque joueur puis clicker
-        sur start
+    <div id="wrapper">
+      <header class="desktop">
+        <h1 class="container desktop">Une partie de 421 ?</h1>
+      </header>
+      <main>
+        <p id="info-desktop" class="container desktop">
+          Ce 421 ce joue a deux veuillez choisir un nom et un avatar, pour chaque joueur puis
+          clicker sur start
+        </p>
+        <p id="info-mobile" class="container mobile">
+          Une partie de 421 ? Veuillez choisir un nom et un avatar.
+        </p>
+        <div id="settings-box" class="container">
+          <div class="container" id="text-box">
+            <p id="text">Donnez un nom et un avatar au joueur 1</p>
+          </div>
+          <div id="player-box" class="container">
+            <h2 id="player-text">Joueur 1</h2>
+            <label for="name">Nom (1 à 8 lettres):</label>
+            <input type="text" id="name" name="name" minlength="1" maxlength="8" size="10" />
+            <div id="avatar-player"></div>
+            <button id="start">Valider joueur 1</button>
+          </div>
+          <div class="avatars">
+            <img src="images/avatars/av1.png" alt="avatar" id="av1" class="avatar-item" />
+            <img src="images/avatars/av2.png" alt="avatar" id="av2" class="avatar-item" />
+            <img src="images/avatars/av3.png" alt="avatar" id="av3" class="avatar-item" />
+            <img src="images/avatars/av4.png" alt="avatar" id="av4" class="avatar-item" />
+          </div>
+          <div class="avatars">
+            <img src="images/avatars/av5.png" alt="avatar" id="av4" class="avatar-item" />
+            <img src="images/avatars/av6.png" alt="avatar" id="av5" class="avatar-item" />
+            <img src="images/avatars/av7.png" alt="avatar" id="av6" class="avatar-item" />
+            <img src="images/avatars/av8.png" alt="avatar" id="av7" class="avatar-item" />
+          </div>
+        </div>
+      </main>
+      <footer>
+        <a href="https://fr.vecteezy.com/vecteur-libre/avatar"
+          >Merci à Avatar Vecteurs par Vecteezy</a
+        >
+      </footer>
+    </div>
+    <div id="avertissement" class="container">
+      <p>
+        Attention pour des raisons d'esthétique et pratique le jeu n&apos;est visible qu&apos;en
+        mode paysage.
       </p>
-      <p id="info-mobile" class="container mobile">
-        Une partie de 421 ? Veuillez choisir un nom et un avatar.
-      </p>
-
-      <div class="container">
-        <div class="container" id="text-box">
-          <p id="text">Donnez un nom et un avatar au joueur 1</p>
-        </div>
-        <div id="player-box" class="container">
-          <h2 id="player-text">Joueur 1</h2>
-          <label for="name">Nom (1 à 8 lettres):</label>
-            <input
-              type="text"
-              id="name"
-              name="name"
-              minlength="1"
-              maxlength="8"
-              size="10"
-            />     
-          <div id="avatar-player"></div>
-          <button id="start">Valider joueur 1</button>
-        </div>
-        <div class="avatars">
-          <img  src="images/avatars/av1.png" alt="avatar" id="av1" class="avatar-item"/>
-          <img  src="images/avatars/av2.png" alt="avatar" id="av2" class="avatar-item"/>
-          <img  src="images/avatars/av3.png" alt="avatar" id="av3" class="avatar-item"/>
-          <img  src="images/avatars/av4.png" alt="avatar" id="av4" class="avatar-item"/>
-        </div>
-        <div class="avatars">
-          <img  src="images/avatars/av5.png" alt="avatar" id="av4" class="avatar-item"/>
-          <img  src="images/avatars/av6.png" alt="avatar" id="av5" class="avatar-item"/>
-          <img  src="images/avatars/av7.png" alt="avatar" id="av6" class="avatar-item"/>
-          <img  src="images/avatars/av8.png" alt="avatar" id="av7" class="avatar-item"/>
-        </div>
-    </main>
-    <footer>
-      <a href="https://fr.vecteezy.com/vecteur-libre/avatar">Merci à Avatar Vecteurs par Vecteezy</a>
-    </footer>
-  </div>
-  <div id="avertissement" class="container">
-    <p>Attention pour des raisons d'esthétique et pratique le jeu n&apos;est visible qu&apos;en mode paysage.</p>
-  </div>
-  <script type="module" src="javascripts/modules/welcome.mjs"></script>
+    </div>
+    <script type="module" src="javascripts/modules/welcome.mjs"></script>
   </body>
 </html>
