--- a/public/game.html
+++ b/public/game.html
@@ -15,7 +15,7 @@
     <title>Game 421</title>
   </head>
   <body>
-    
+    <div id="wrapper">
     <header>
       <img src="" alt="" />
       <div id="header-title">
@@ -33,27 +33,27 @@
           <h2 id="name1"></h2>
           <img src="" id="avatar1" alt="avatar player 1" />
           <div id="box-token1" class="tokens-box">
-            <canvas id="tp1-1" class="token-p1" width="20" height="20"></canvas>
-            <canvas id="tp1-2" class="token-p1" width="20" height="20"></canvas>
-            <canvas id="tp1-3" class="token-p1" width="20" height="20"></canvas>
-            <canvas id="tp1-4" class="token-p1" width="20" height="20"></canvas>
-            <canvas id="tp1-5" class="token-p1" width="20" height="20"></canvas>
-            <canvas id="tp1-6" class="token-p1" width="20" height="20"></canvas>
-            <canvas id="tp1-7" class="token-p1" width="20" height="20"></canvas>
-            <canvas id="tp1-8" class="token-p1" width="20" height="20"></canvas>
-            <canvas id="tp1-9" class="token-p1" width="20" height="20"></canvas>
-            <canvas id="tp1-10" class="token-p1" width="20" height="20"></canvas>
-            <canvas id="tp1-11" class="token-p1" width="20" height="20"></canvas>
-            <canvas id="tp1-12" class="token-p1" width="20" height="20"></canvas>
-            <canvas id="tp1-13" class="token-p1" width="20" height="20"></canvas>
-            <canvas id="tp1-14" class="token-p1" width="20" height="20"></canvas>
-            <canvas id="tp1-15" class="token-p1" width="20" height="20"></canvas>
-            <canvas id="tp1-16" class="token-p1" width="20" height="20"></canvas>
-            <canvas id="tp1-17" class="token-p1" width="20" height="20"></canvas>
-            <canvas id="tp1-18" class="token-p1" width="20" height="20"></canvas>
-            <canvas id="tp1-19" class="token-p1" width="20" height="20"></canvas>
-            <canvas id="tp1-20" class="token-p1" width="20" height="20"></canvas>
-            <canvas id="tp1-21" class="token-p1" width="20" height="20"></canvas>
+            <canvas id="tp1-1" class="token-p1 token" width="20" height="20"></canvas>
+            <canvas id="tp1-2" class="token-p1 token" width="20" height="20"></canvas>
+            <canvas id="tp1-3" class="token-p1 token" width="20" height="20"></canvas>
+            <canvas id="tp1-4" class="token-p1 token" width="20" height="20"></canvas>
+            <canvas id="tp1-5" class="token-p1 token" width="20" height="20"></canvas>
+            <canvas id="tp1-6" class="token-p1 token" width="20" height="20"></canvas>
+            <canvas id="tp1-7" class="token-p1 token" width="20" height="20"></canvas>
+            <canvas id="tp1-8" class="token-p1 token" width="20" height="20"></canvas>
+            <canvas id="tp1-9" class="token-p1 token" width="20" height="20"></canvas>
+            <canvas id="tp1-10" class="token-p1 token" width="20" height="20"></canvas>
+            <canvas id="tp1-11" class="token-p1 token" width="20" height="20"></canvas>
+            <canvas id="tp1-12" class="token-p1 token" width="20" height="20"></canvas>
+            <canvas id="tp1-13" class="token-p1 token" width="20" height="20"></canvas>
+            <canvas id="tp1-14" class="token-p1 token" width="20" height="20"></canvas>
+            <canvas id="tp1-15" class="token-p1 token" width="20" height="20"></canvas>
+            <canvas id="tp1-16" class="token-p1 token" width="20" height="20"></canvas>
+            <canvas id="tp1-17" class="token-p1 token" width="20" height="20"></canvas>
+            <canvas id="tp1-18" class="token-p1 token" width="20" height="20"></canvas>
+            <canvas id="tp1-19" class="token-p1 token" width="20" height="20"></canvas>
+            <canvas id="tp1-20" class="token-p1 token" width="20" height="20"></canvas>
+            <canvas id="tp1-21" class="token-p1 token" width="20" height="20"></canvas>
           </div>
         </div>
         <div id="dice-box-1" class="dice-box container">
@@ -63,27 +63,27 @@
         </div>
         <div id="gameboard" class="container">
           <div id="pot" class="container box-tokens">
-            <canvas id="tb-1" class="token-board" width="20" height="20"></canvas>
-            <canvas id="tb-2" class="token-board" width="20" height="20"></canvas>
-            <canvas id="tb-3" class="token-board" width="20" height="20"></canvas>
-            <canvas id="tb-4" class="token-board" width="20" height="20"></canvas>
-            <canvas id="tb-5" class="token-board" width="20" height="20"></canvas>
-            <canvas id="tb-6" class="token-board" width="20" height="20"></canvas>
-            <canvas id="tb-7" class="token-board" width="20" height="20"></canvas>
-            <canvas id="tb-8" class="token-board" width="20" height="20"></canvas>
-            <canvas id="tb-9" class="token-board" width="20" height="20"></canvas>
-            <canvas id="tb-10" class="token-board" width="20" height="20"></canvas>
-            <canvas id="tb-11" class="token-board" width="20" height="20"></canvas>
-            <canvas id="tb-12" class="token-board" width="20" height="20"></canvas>
-            <canvas id="tb-13" class="token-board" width="20" height="20"></canvas>
-            <canvas id="tb-14" class="token-board" width="20" height="20"></canvas>
-            <canvas id="tb-15" class="token-board" width="20" height="20"></canvas>
-            <canvas id="tb-16" class="token-board" width="20" height="20"></canvas>
-            <canvas id="tb-17" class="token-board" width="20" height="20"></canvas>
-            <canvas id="tb-18" class="token-board" width="20" height="20"></canvas>
-            <canvas id="tb-19" class="token-board" width="20" height="20"></canvas>
-            <canvas id="tb-20" class="token-board" width="20" height="20"></canvas>
-            <canvas id="tb-21" class="token-board" width="20" height="20"></canvas>
+            <canvas id="tb-1" class="token-board token" width="20" height="20"></canvas>
+            <canvas id="tb-2" class="token-board token" width="20" height="20"></canvas>
+            <canvas id="tb-3" class="token-board token" width="20" height="20"></canvas>
+            <canvas id="tb-4" class="token-board token" width="20" height="20"></canvas>
+            <canvas id="tb-5" class="token-board token" width="20" height="20"></canvas>
+            <canvas id="tb-6" class="token-board token" width="20" height="20"></canvas>
+            <canvas id="tb-7" class="token-board token" width="20" height="20"></canvas>
+            <canvas id="tb-8" class="token-board token" width="20" height="20"></canvas>
+            <canvas id="tb-9" class="token-board token" width="20" height="20"></canvas>
+            <canvas id="tb-10" class="token-board token" width="20" height="20"></canvas>
+            <canvas id="tb-11" class="token-board token" width="20" height="20"></canvas>
+            <canvas id="tb-12" class="token-board token" width="20" height="20"></canvas>
+            <canvas id="tb-13" class="token-board token" width="20" height="20"></canvas>
+            <canvas id="tb-14" class="token-board token" width="20" height="20"></canvas>
+            <canvas id="tb-15" class="token-board token" width="20" height="20"></canvas>
+            <canvas id="tb-16" class="token-board token" width="20" height="20"></canvas>
+            <canvas id="tb-17" class="token-board token" width="20" height="20"></canvas>
+            <canvas id="tb-18" class="token-board token" width="20" height="20"></canvas>
+            <canvas id="tb-19" class="token-board token" width="20" height="20"></canvas>
+            <canvas id="tb-20" class="token-board token" width="20" height="20"></canvas>
+            <canvas id="tb-21" class="token-board token" width="20" height="20"></canvas>
           </div>
           <div id="dice-box-board" class="container">
             <canvas class="dices" id="d1-board" width="34" height="34"></canvas>
@@ -101,27 +101,27 @@
           <h2 id="name2"></h2>
           <img src="" id="avatar2" alt="avatar player 2" />
           <div id="box-token2" class="tokens-box">
-            <canvas id="tp2-1" class="token-p2" width="20" height="20"></canvas>
-            <canvas id="tp2-2" class="token-p2" width="20" height="20"></canvas>
-            <canvas id="tp2-3" class="token-p2" width="20" height="20"></canvas>
-            <canvas id="tp2-4" class="token-p2" width="20" height="20"></canvas>
-            <canvas id="tp2-5" class="token-p2" width="20" height="20"></canvas>
-            <canvas id="tp2-6" class="token-p2" width="20" height="20"></canvas>
-            <canvas id="tp2-7" class="token-p2" width="20" height="20"></canvas>
-            <canvas id="tp2-8" class="token-p2" width="20" height="20"></canvas>
-            <canvas id="tp2-9" class="token-p2" width="20" height="20"></canvas>
-            <canvas id="tp2-10" class="token-p2" width="20" height="20"></canvas>
-            <canvas id="tp2-11" class="token-p2" width="20" height="20"></canvas>
-            <canvas id="tp2-12" class="token-p2" width="20" height="20"></canvas>
-            <canvas id="tp2-13" class="token-p2" width="20" height="20"></canvas>
-            <canvas id="tp2-14" class="token-p2" width="20" height="20"></canvas>
-            <canvas id="tp2-15" class="token-p2" width="20" height="20"></canvas>
-            <canvas id="tp2-16" class="token-p2" width="20" height="20"></canvas>
-            <canvas id="tp2-17" class="token-p2" width="20" height="20"></canvas>
-            <canvas id="tp2-18" class="token-p2" width="20" height="20"></canvas>
-            <canvas id="tp2-19" class="token-p2" width="20" height="20"></canvas>
-            <canvas id="tp2-20" class="token-p2" width="20" height="20"></canvas>
-            <canvas id="tp2-21" class="token-p2" width="20" height="20"></canvas>
+            <canvas id="tp2-1" class="token-p2 token" width="20" height="20"></canvas>
+            <canvas id="tp2-2" class="token-p2 token" width="20" height="20"></canvas>
+            <canvas id="tp2-3" class="token-p2 token" width="20" height="20"></canvas>
+            <canvas id="tp2-4" class="token-p2 token" width="20" height="20"></canvas>
+            <canvas id="tp2-5" class="token-p2 token" width="20" height="20"></canvas>
+            <canvas id="tp2-6" class="token-p2 token" width="20" height="20"></canvas>
+            <canvas id="tp2-7" class="token-p2 token" width="20" height="20"></canvas>
+            <canvas id="tp2-8" class="token-p2 token" width="20" height="20"></canvas>
+            <canvas id="tp2-9" class="token-p2 token" width="20" height="20"></canvas>
+            <canvas id="tp2-10" class="token-p2 token" width="20" height="20"></canvas>
+            <canvas id="tp2-11" class="token-p2 token" width="20" height="20"></canvas>
+            <canvas id="tp2-12" class="token-p2 token" width="20" height="20"></canvas>
+            <canvas id="tp2-13" class="token-p2 token" width="20" height="20"></canvas>
+            <canvas id="tp2-14" class="token-p2 token" width="20" height="20"></canvas>
+            <canvas id="tp2-15" class="token-p2 token" width="20" height="20"></canvas>
+            <canvas id="tp2-16" class="token-p2 token" width="20" height="20"></canvas>
+            <canvas id="tp2-17" class="token-p2 token" width="20" height="20"></canvas>
+            <canvas id="tp2-18" class="token-p2 token" width="20" height="20"></canvas>
+            <canvas id="tp2-19" class="token-p2 token" width="20" height="20"></canvas>
+            <canvas id="tp2-20" class="token-p2 token" width="20" height="20"></canvas>
+            <canvas id="tp2-21" class="token-p2 token" width="20" height="20"></canvas>
           </div>
         </div>
       </div>
@@ -254,6 +254,13 @@
         <p>Une fois que le « pot » est vide on peut alors commencer la deuxième manche. Lors de la « décharge » le but est d’être le premier joueur à ne plus avoir de jetons. Les règles sont les mêmes, la meilleure combinaison du tour donne ses jetons à la plus faible. Lorsqu’un joueur n’a plus de jetons la partie se termine et il est déclaré vainqueur.</p>
       </div>
     </div>
+  </div>
+  <div id="avertissement" class="container">
+    <p>
+      Attention pour des raisons d'esthétique et pratique le jeu n&apos;est visible qu&apos;en
+      mode paysage.
+    </p>
+  </div>
     <script type="module" src="javascripts/modules/game.mjs"></script>
   </body>
 </html>
