add color for current player

--- a/public/game.html
+++ b/public/game.html
@@ -84,7 +84,7 @@
             <canvas id="tb-20" class="token-board token" width="20" height="20"></canvas>
             <canvas id="tb-21" class="token-board token" width="20" height="20"></canvas>
           </div>
-          <div id="dice-box-board" class="container">
+          <div id="dice-box-board" >
             <div class="scene-d1 scene">
               <canvas class="dices" id="d1-board" width="34" height="34"></canvas>
               <div id="cube-d1" class="cube">
