fix bug message winner

--- a/public/game.html
+++ b/public/game.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="./stylesheets/game.css" />
   <link rel="preconnect" href="https://fonts.gstatic.com" />
   <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet" />
+  <link href="http://fonts.cdnfonts.com/css/komikandy" rel="stylesheet">
   <title>Game 421</title>
 </head>
 
@@ -34,6 +35,7 @@
         <button id="roll-dices">Jeter</button>
       </div>
       <div class="main-container">
+        <canvas id="anim-token" width="0" height="0"></canvas>
         <div id="player1" class="player-board">
           <h2 id="name1"></h2>
           <img src="" id="avatar1" alt="avatar player 1" />
@@ -165,8 +167,8 @@
             <canvas id="tp2-21" class="token-p2 token" width="20" height="20"></canvas>
           </div>
         </div>
+        
       </div>
-
     </main>
     <footer id="dialog-box" class="container">
     </footer>
