refactor css welcome page

--- a/public/game.html
+++ b/public/game.html
@@ -16,15 +16,12 @@
 <body>
   <div id="wrapper">
     <header>
-      <img src="" alt="" />
-      <div id="header-title">
         <h1 id="title1">lolo</h1>
         <h1>vs</h1>
         <h1 id="title2">name2</h1>
-      </div>
-      <button id="set-players">Changer Joueurs</button>
+      <button id="set-players">Accueil</button>
       <button id="restart">Recommencer</button>
-      <button id="btn-rules">Régles</button>
+      <button id="btn-rules">Règles</button>
     </header>
     <main>
       <div id="head-game" class="container">
@@ -169,7 +166,7 @@
 
     </main>
     <footer class="container">
-      <div id="score">score</div>
+      <div id="score"></div>
       <div id="dialog-box"></div>
     </footer>
     <div id="rules" class="modal">
